--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 html {
-  // font-size: 16px;
+  font-size: 16px;
   @include small-phone {
     font-size: 13px;
   }
@@ -14,15 +14,15 @@ html {
     font-size: 16px;
   }
 
-  // @include tablet {
-  //     font-size: 16px;
-  // }
+  @include tablet {
+    font-size: 16px;
+  }
 
-  // @include laptop {
-  //     font-size: 16px;
-  // }
+  @include laptop {
+    font-size: 16px;
+  }
 
-  // // @include desktop {
-  // //     font-size: 17px;
-  // // }
+  // @include desktop {
+  //     font-size: 17px;
+  // }
 }
