--- a/src/styles/landing-page.scss
+++ b/src/styles/landing-page.scss
@@ -15,7 +15,7 @@
     .patient-btn {
       margin: 1rem 2rem;
       height: 3rem;
-      font-size: 1.5rem;
+      font-size: 1rem;
       color: #cbcbcb;
       text-transform: none;
       font-weight: 500;
@@ -26,6 +26,7 @@
 
       svg {
         margin-right: 1rem;
+        width: 1rem;
       }
     }
   }
@@ -98,13 +99,14 @@
 
   a {
     margin: 0 auto;
-    width: 10rem;
+    width: 10.2rem;
+    height: 2.8rem;
 
     line-height: 36px;
     text-transform: none;
 
     font-weight: $bold;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     // padding: 0.5rem 2rem;
     border-radius: 1.78125rem;
     // width: 14.125rem;
@@ -114,17 +116,45 @@
     &:hover {
       background: white;
     }
-
-    @include large-phone {
-      //   padding: 0.8rem 3rem;
-    }
   }
 
   img {
     margin: 0 auto;
     display: flex;
-    margin-top: 5rem;
-    width: 20rem;
-    height: 20rem;
+    margin-top: 5.5rem;
+    max-width: 20rem;
+    max-height: 20rem;
+
+    @include tablet {
+      max-width: 25rem;
+      max-height: 25rem;
+    }
+  }
+
+  @include laptop {
+    section {
+      margin-left: 55rem;
+
+      h1 {
+        margin-top: 10rem;
+      }
+
+      h1,
+      p {
+        text-align: left;
+        margin-left: 0;
+      }
+
+      .try-btn {
+        margin: 0;
+        margin-top: 5rem;
+      }
+    }
+
+    img {
+      margin: 0;
+      margin-top: -22rem;
+      margin-left: 7rem;
+    }
   }
 }
