--- a/src/styles/diagnose-page.scss
+++ b/src/styles/diagnose-page.scss
@@ -209,6 +209,59 @@
   .stopwatch-container {
     margin-top: auto;
   }
+
+  .transcript {
+    color: #fff;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    // margin: 0 auto;
+    margin-top: 4rem;
+    margin-bottom: 3.5rem;
+    width: 75vw;
+    max-width: 30rem;
+  }
+
+  .cards-container {
+    margin-top: 1.5rem;
+
+    @include laptop {
+      display: flex;
+      flex-direction: row;
+      gap: 2rem;
+      // margin-left: 10rem;
+      width: 60vw;
+    }
+  }
+
+  .card {
+    border-radius: 31.868px;
+    border: 1px solid #8c8c8c;
+
+    background: #48567e1c;
+
+    box-shadow: 3px 10px 4px 0px rgba(0, 0, 0, 0.25);
+    width: 75vw;
+    max-width: 30rem;
+    padding: 1rem 0rem;
+    margin-bottom: 3.5rem;
+
+    p {
+      color: #fff;
+      text-align: center;
+      font-size: 1rem;
+      font-weight: 400;
+      margin: 0 auto;
+      // width: 75%;
+      line-height: rem;
+    }
+
+    h1 {
+      margin: 0 auto;
+      text-align: center;
+      margin-bottom: 1.5rem;
+    }
+  }
 }
 
 // .is-recording {
